bus: Sync handler setting not thread-safe
While protected with the object lock, calling the sync handler is done without keeping the object lock and as such the sync handler might disappear in the mean time, causing crashes or worse.
While protected with the object lock, calling the sync handler is done without keeping the object lock and as such the sync handler might disappear in the mean time, causing crashes or worse.